personal-blog/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: default
  labels:
    app: personal-blog
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: personal-blog
