personal-blog/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog
  namespace: default
  labels:
    app: personal-blog
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - personal-blog.cnoe.localtest.me
    secretName: personal-blog-tls
  rules:
  - host: personal-blog.cnoe.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-blog
            port:
              number: 4000
